--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,97 +2,20 @@
 
 :root {
   color-scheme: light dark;
+  @apply antialiased bg-background text-foreground;
 }
 
 @theme inline {
-  --color-background: light-dark(var(--color-white), var(--color-neutral-950));
+  --color-background: light-dark(var(--color-zinc-100), var(--color-zinc-900));
 
-  --color-foreground: light-dark(
-    var(--color-neutral-950),
-    var(--color-neutral-50)
-  );
+  --color-foreground: light-dark(var(--color-zinc-900), var(--color-zinc-100));
 
-  --color-card: light-dark(var(--color-white), var(--color-neutral-950));
-  --color-card-foreground: light-dark(
-    var(--color-neutral-950),
-    var(--color-neutral-50)
-  );
-
-  --color-popover: light-dark(var(--color-white), var(--color-neutral-950));
-  --color-popover-foreground: light-dark(
-    var(--color-neutral-950),
-    var(--color-neutral-50)
-  );
-
-  --color-primary: light-dark(
-    var(--color-neutral-900),
-    var(--color-neutral-50)
-  );
-  --color-primary-foreground: light-dark(
-    var(--color-neutral-50),
-    var(--color-neutral-900)
-  );
-
-  --color-secondary: light-dark(
-    var(--color-neutral-100),
-    var(--color-neutral-800)
-  );
-  --color-secondary-foreground: light-dark(
-    var(--color-neutral-900),
-    var(--color-neutral-50)
-  );
-
-  --color-muted: light-dark(var(--color-neutral-100), var(--color-neutral-800));
+  --color-muted: light-dark(var(--color-zinc-100), var(--color-zinc-800));
   --color-muted-foreground: light-dark(
-    var(--color-neutral-500),
-    var(--color-neutral-400)
+    var(--color-zinc-500),
+    var(--color-zinc-400)
   );
 
-  --color-accent: light-dark(
-    var(--color-neutral-100),
-    var(--color-neutral-800)
-  );
-  --color-accent-foreground: light-dark(
-    var(--color-neutral-900),
-    var(--color-neutral-50)
-  );
-
-  --color-destructive: light-dark(var(--color-red-600), var(--color-red-500));
-  --color-destructive-foreground: light-dark(
-    var(--color-neutral-50),
-    var(--color-neutral-50)
-  );
-
-  --color-constructive: light-dark(
-    var(--color-green-600),
-    var(--color-green-500)
-  );
-  --color-constructive-foreground: light-dark(
-    var(--color-neutral-50),
-    var(--color-neutral-900)
-  );
-
-  --color-border: light-dark(
-    var(--color-neutral-200),
-    var(--color-neutral-800)
-  );
-  --color-input: light-dark(var(--color-neutral-200), var(--color-neutral-800));
-  --color-ring: light-dark(var(--color-neutral-950), var(--color-neutral-300));
-
-  --color-chart-1: light-dark(var(--color-blue-500), var(--color-blue-900));
-  --color-chart-2: light-dark(var(--color-green-500), var(--color-green-900));
-  --color-chart-3: light-dark(var(--color-yellow-500), var(--color-yellow-900));
-  --color-chart-4: light-dark(var(--color-red-500), var(--color-red-900));
-  --color-chart-5: light-dark(var(--color-purple-500), var(--color-purple-900));
-
-  --color-recycling: light-dark(var(--color-blue-700), var(--color-blue-500));
-  --color-trash: light-dark(var(--color-green-700), var(--color-green-500));
-
-  /* * {
-    @apply border-border;
-  }
-
-  body {
-    @apply bg-background text-foreground antialiased;
-  } */
+  --color-recycling: light-dark(var(--color-blue-600), var(--color-blue-500));
+  --color-trash: light-dark(var(--color-green-600), var(--color-green-500));
 }
