vitest + ts paths

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import { getNow } from "../lib/getNow";
-import Layout from "../layouts/Layout.astro";
-import DateParamError from "../components/NowParamError";
-import Main from "../components/Main";
+import { getNow } from "@lib/getNow";
+import Layout from "@layouts/Layout.astro";
+import DateParamError from "@components/NowParamError";
+import Main from "@components/Main";
 
 export const prerender = false;
 
