--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import "@styles/global.css";
 import { PLAUSIBLE_DOMAIN, PLAUSIBLE_SRC } from "astro:env/server";
 ---
 
