make utility so its able to be overriden

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,11 +5,13 @@
   @apply antialiased bg-background text-foreground selection:bg-selection-background;
 }
 
-* {
-  /* This shatters my world view, but it makes the images not overflow their
-  flex container, and it probably good in general.
-  https://www.youtube.com/watch?v=cH8VbLM1958 */
-  @apply min-w-0 break-words;
+@layer utilities {
+  * {
+    /* This shatters my world view, but it makes the images not overflow their
+    flex container, and it probably good in general.
+    https://www.youtube.com/watch?v=cH8VbLM1958 */
+    @apply min-w-0 break-words;
+  }
 }
 
 @theme inline {
